<resources>
    <string name="app_name">Showcase</string>
    <string name="button_addPortfolio">Add Portfolio</string>
    <string name="hint_portfolioTitle">Portfolio Title</string>
    <string name="hint_portfolioDescription">Description </string>
    <string name="menu_addPortfolio">Add Portfolio</string>
    <string name="menu_cancelPortfolio">Back</string>
    <string name="enter_portfolio_title"> Please enter a Portfolio Title </string>
    <string name="save_portfolio"> Save Portfolio </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_portfolio_image">Select portfolio image</string>
    <string name="button_changeImage">Change Image</string>
    <string name="hint_projectTitle">Project Title</string>
    <string name="hint_projectDescription">Project Description </string>
    <string name="button_addProject">Add Project</string>
    <string name="menu_addProject">Add Project</string>
    <string name="menu_cancelProject">Cancel Project</string>
    <string name="enter_project_title"> Please enter a Project Title </string>
    <string name="save_project"> Save Project</string>
    <string name="select_project_image">Select project image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="hint_projectLatitude">Project Latitude</string>
    <string name="hint_projectLongitude">Project Longitude</string>
    <string name="designed_by">Designed By Andrew Cameron</string>
    <string name="splash_image">Splash Image</string>
    <string name="new_project">Add New Project</string>
    <string name="menu_portfolio_delete">Portfolio Delete</string>
    <string name="edit_portfolio_details">Edit Portfolio Details</string>
    <string name="portfolio_title_label">Portfolio Title</string>
    <string name="portfolio_description_label">Portfolio Description</string>
    <string name="new_portfolio_label">New Portfolio</string>
    <string name="portfolios_label">Portfolios</string>
    <string name="menu_project_delete">Project Delete</string>
    <string name="title_activity_project_maps">ProjectMapsActivity</string>
    <string name="project_image_placeholder">Project Image</string>
    <string name="project_title_placeholder">Project Title</string>
    <string name="project_description_placeholder">Project Description</string>
    <string name="menu_viewProjects">View Projects</string>
    <string name="portfolio_projectList">Projects for Portfolio:</string>
    <string name="title_activity_project_list">ProjectListActivity</string>
    <string name="button_goToProjects">Go To Projects</string>
    <string name="title_portfolioName">Portfolio</string>
    <string name="selected_item">Selected item:</string>
    <string-array name="menu_portfolioTypes">
        <item>New Build</item>
        <item>Renovation</item>
        <item>Interiors</item>
        <item>Landscaping</item>
        <item>Commercial</item>
    </string-array>
    <string name="portfolio_type_label">Portfolio Type</string>
    <string name="btn_filter">Filter Portfolio Types</string>
    <string name="project_budget_label">Project Budget</string>
    <string name="project_title_label">Project Title</string>
    <string name="project_description_label">Project Description</string>
    <string name="project_location_label">Project Location</string>
    <string name="project_images_label">Project Images</string>
    <string name="project_completion_label">Project Completion Date</string>
    <string name="btn_budget_filter">Filter Project Budgets</string>
    <string name="portfolio_filter_label">Filter Portfolio Types</string>
    <string name="new_project_label">New Project</string>
    <string name="portfolio_image_label">Portfolio Image</string>
    <string name="project_save">Project Save</string>
    <string name="portfolio_save">Portfolio Save</string>
    <string name="project_portfolio_placeholder">Portfolio Title</string>




</resources>